# air-gapped

./: .gitignore  CHANGELOG.md  CHARTER.md  Makefile  README.md  README.zh-CN.md  VERSIONS.md  bootstrap.sh  env.sh  pyproject.toml  run-codex.sh  start-all.sh  start-llama-server.sh  start-vllm.sh  start.sh  stop-llama-server.sh  stop-vllm.sh  stop.sh  test-api.sh  test-vllm-api.sh
codex-proxy/: go.mod  main.go  start.sh
docs/: README.md  UX_IMPROVEMENTS.md
scripts/: check-portable.sh  codex-config.toml.template  codex_proxy.py  diagnose_backend_proxy.sh  download_llama_bin.sh  download_model.py  run_tests.sh  run_tests_vllm.sh
