[project]
name = "air-gapped-codex-llamacpp"
version = "0.4.0"
description = "Portable Codex CLI + llama.cpp (CPU) for air-gapped use"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "huggingface_hub>=0.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["scripts"]
